@@ -7,6 +7,8 @@ cdebconf (0.139) UNRELEASED; urgency=low
     plugin would ever be returned by CAPB (and probably also caused a minor
     buffer overflow, although not exploitable in the context of d-i).
   * Mark parent halves of confmodule communication pipes close-on-exec.
+  * Move newt initialisation into new cdebconf_newt_setup function, exported
+    for the benefit of cdebconf-newt-terminal.
 
  -- Colin Watson <cjwatson@debian.org>  Mon, 19 Jan 2009 22:54:08 +0000
 
